[gd_scene load_steps=2 format=3 uid="uid://0yvvlo5xttpw"]

[ext_resource type="Script" path="res://scene/fight/fight_scene.gd" id="1_rulib"]

[node name="fight_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rulib")

[node name="bg_tex_rect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="cell_root" type="Control" parent="."]
layout_mode = 1
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 2

[node name="unit_root" type="Control" parent="cell_root"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
